<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/weight"
        android:layout_width="250dp"
        android:layout_height="72dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/my_weight_in_kg"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="342dp"
        android:layout_height="51dp"
        android:layout_marginTop="35dp"
        android:text="@string/bmi_calculator_entry"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/button2"
        android:layout_width="147dp"
        android:layout_height="53dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="100dp"
        android:background="#009688"
        android:text="@string/compute_my_bmi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/height"
        android:layout_width="250dp"
        android:layout_height="72dp"
        android:layout_marginTop="208dp"
        android:hint="@string/my_height_in_cm"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bmi"
        android:layout_width="217dp"
        android:layout_height="69dp"
        android:layout_marginTop="300dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="107dp"
        android:layout_height="52dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="100dp"
        android:background="#009688"
        android:text="@string/clear_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/weiter"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="40dp"
        android:onClick="nextPage"
        android:text="@string/weiter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/begruessung"
        android:layout_width="186dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/weiter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

</androidx.constraintlayout.widget.ConstraintLayout>