<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gewicht_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/neueSeite"
        android:layout_width="201dp"
        android:layout_height="53dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="72dp"
        android:text="@string/dein_gewicht"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/groesse_header"
        android:layout_width="196dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="196dp"
        android:text="@string/deine_gr_sse"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bmi_header"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="328dp"
        android:text="@string/dein_bmi"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gewicht_result"
        android:layout_width="140dp"
        android:layout_height="67dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="76dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/groesse_result"
        android:layout_width="143dp"
        android:layout_height="63dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="196dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bmi_result"
        android:layout_width="331dp"
        android:layout_height="118dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="388dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ratings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="74dp"
        android:onClick="ratingPage"
        android:text="@string/ratings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_result" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="74dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_result" />

</androidx.constraintlayout.widget.ConstraintLayout>