<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="326dp"
        android:layout_height="69dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/vorname" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="317dp"
        android:layout_height="66dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="91dp"
        app:layout_constraintBottom_toTopOf="@+id/erfassen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nachname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gebDate"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/geburtsdatum"
            android:onClick="next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nachname"
        android:layout_width="318dp"
        android:layout_height="70dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="65dp"
        android:hint="@string/nachname"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/erfassen"
        android:layout_width="135dp"
        android:layout_height="78dp"
        android:layout_marginStart="59dp"
        android:layout_marginBottom="106dp"
        android:onClick="next"
        android:text="@string/eingabe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/deleteUser"
        android:layout_width="137dp"
        android:layout_height="76dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="108dp"
        android:text="Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>